Juego Gato Version Final Remedial Elias

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <div id="coordenadas" width="300" height="300">
 
     </div>
-    <script src="/gato.js">
-
-    </script>
+    <script src="/gato.js"></script>
+    <script src="sweetalert2.all.min.js"></script>
 </body>
 </html>
